update room function

--- a/public/chat.html
+++ b/public/chat.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>    <title>Chat Web Application</title>
     <style>
 
-    *{
+*{
     margin:0;
     padding: 0;
     box-sizing: border-box;
@@ -87,7 +87,7 @@ body{
     padding: 0 20px;
     color: #0048aa;
     font-weight: bold;
-    font-size: 2.0rem;
+    font-size: 2.5rem;
     border-radius: 0 10px 0 0;
     box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.75);
 
@@ -208,7 +208,7 @@ body{
         <div id="new-message-container">
         </div>
         <div id="chat-title">
-            <span id="roomtitle"></span>
+            <span></span>
             <input type = "button" id = "leaveroom" onclick = "leaveRoom()" value = "Leave">  
         </div>
         <div id="chat-message-list">
