--- a/public/index.html
+++ b/public/index.html
@@ -96,31 +96,22 @@
                         type="text"
                         name="username"
                         id="username"
-                        placeholder="Enter username..."
+                        placeholder="Enter nickname..."
                         required
                     />
                 </div>
                 <div class="form-control">
                     <label for="room">Room</label>
                     <select name="room" id="room">
-                        <option value="Room A">Room A</option>
-                        <option value="Room B">Room B</option>
-                        <option value="Room C">Room C</option>
-                        <option value="Room D">Room D</option>
+                        <option value="AZ">AZ</option>
+                        <option value="BNT">BNT</option>
+                        <option value="Moderna">Moderna</option>
+                        <option value="MVC">MVC</option>
                     </select>
                 </div>
                 <button type="submit" class="btn">Join Chat</button>
             </form>  
         </main>
     </div>
-    <script>
-    //我從這裡取值 然後我要在client讀 
-    // function join(){
-    // const username = $('#username').val()
-    // const room = $('#room').val()  
-    // localStorage.setItem("username", username);
-    // localStorage.setItem("room", room);
-    //     }
-    </script>
   </body>
 </html>
