--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,7 @@
         padding: 5px;
         height: 40px;
         width: 100%;
+        width: auto;
     }
     
     .join-main select {
@@ -113,5 +114,8 @@
             </form>  
         </main>
     </div>
+    <script>
+        
+    </script>
   </body>
 </html>
